hack/manifests/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: system-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "prometheus.127.0.0.1.nip.io"
    - "grafana.127.0.0.1.nip.io"
    - "kiali.127.0.0.1.nip.io"
