hack/manifests/grafana.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
  - grafana.127.0.0.1.nip.io
  gateways:
  - system-gateway
  http:
  - name: "default"
    route:
    - destination:
        host: grafana.tracing.svc.cluster.local
        port:
          number: 80
