hack/manifests/kiali.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
spec:
  hosts:
  - kiali.127.0.0.1.nip.io
  gateways:
  - system-gateway
  http:
  - name: "default"
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
